Import libraries and load the dataset

--- a/ML Assignment 2.ipynb
+++ b/ML Assignment 2.ipynb
@@ -1,34 +1,55 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3341d638",
+   "metadata": {},
+   "source": [
+    "# Detecting Heart Diseases using ML: SVM Algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0eab344",
+   "metadata": {},
+   "source": [
+    "## Data Preparation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc60eedf",
+   "metadata": {},
+   "source": [
+    "### Import required libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "e27dd423",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Import libraries\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
+    "from sklearn import preprocessing\n",
+    "from sklearn.compose import make_column_transformer\n",
     "import seaborn as sns\n",
-    "from matplotlib import pyplot as plt"
+    "from imblearn.over_sampling import SMOTE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30ef9c6c",
+   "metadata": {},
+   "source": [
+    "### Load the dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "id": "c1e5b60f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#load the dataset\n",
-    "df = pd.read_csv('healthcare-dataset-stroke-data.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "d46eb17f",
    "metadata": {},
    "outputs": [
     {
@@ -169,13 +190,14 @@
        "4       1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Read the first 5 lines of the data set\n",
+    "# Loading the dataset to a pandas dataframe\n",
+    "df = pd.read_csv('healthcare-dataset-stroke-data.csv')\n",
     "df.head()"
    ]
   },
