--- a/ML Assignment 2.ipynb
+++ b/ML Assignment 2.ipynb
@@ -202,9 +202,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9687e107",
+   "metadata": {},
+   "source": [
+    "### Preprocess the data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "33a384dd",
+   "execution_count": 3,
+   "id": "c3de89e5",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +236,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
        "      <th>gender</th>\n",
        "      <th>age</th>\n",
        "      <th>hypertension</th>\n",
@@ -244,50 +251,106 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5105</th>\n",
-       "      <td>18234</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>1</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>67.0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Private</td>\n",
        "      <td>Urban</td>\n",
-       "      <td>83.75</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>never smoked</td>\n",
-       "      <td>0</td>\n",
+       "      <td>228.69</td>\n",
+       "      <td>36.6</td>\n",
+       "      <td>formerly smoked</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5106</th>\n",
-       "      <td>44873</td>\n",
+       "      <th>1</th>\n",
        "      <td>Female</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Self-employed</td>\n",
-       "      <td>Urban</td>\n",
-       "      <td>125.20</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>never smoked</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5107</th>\n",
-       "      <td>19723</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>35.0</td>\n",
+       "      <td>61.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Self-employed</td>\n",
        "      <td>Rural</td>\n",
-       "      <td>82.99</td>\n",
-       "      <td>30.6</td>\n",
+       "      <td>202.21</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>never smoked</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>Rural</td>\n",
+       "      <td>105.92</td>\n",
+       "      <td>32.5</td>\n",
+       "      <td>never smoked</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>Urban</td>\n",
+       "      <td>171.23</td>\n",
+       "      <td>34.4</td>\n",
+       "      <td>smokes</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Self-employed</td>\n",
+       "      <td>Rural</td>\n",
+       "      <td>174.12</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>never smoked</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   gender   age  hypertension  heart_disease ever_married      work_type  \\\n",
+       "0    Male  67.0             0              1          Yes        Private   \n",
+       "1  Female  61.0             0              0          Yes  Self-employed   \n",
+       "2    Male  80.0             0              1          Yes        Private   \n",
+       "3  Female  49.0             0              0          Yes        Private   \n",
+       "4  Female  79.0             1              0          Yes  Self-employed   \n",
+       "\n",
+       "  Residence_type  avg_glucose_level   bmi   smoking_status  stroke  \n",
+       "0          Urban             228.69  36.6  formerly smoked       1  \n",
+       "1          Rural             202.21   NaN     never smoked       1  \n",
+       "2          Rural             105.92  32.5     never smoked       1  \n",
+       "3          Urban             171.23  34.4           smokes       1  \n",
+       "4          Rural             174.12  24.0     never smoked       1  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove 'id' column\n",
+    "df.drop('id', axis='columns', inplace=True)\n",
+    "df.head()"
+   ]
+  },
        "    <tr>\n",
        "      <th>5108</th>\n",
        "      <td>37544</td>\n",
