Analyze dataset for missing values

--- a/ML Assignment 2.ipynb
+++ b/ML Assignment 2.ipynb
@@ -351,6 +351,61 @@
     "df.head()"
    ]
   },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "57f5da65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5110, 11)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the shape (number of rows and columns) of the data set\n",
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5080f162",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender                 0\n",
+       "age                    0\n",
+       "hypertension           0\n",
+       "heart_disease          0\n",
+       "ever_married           0\n",
+       "work_type              0\n",
+       "Residence_type         0\n",
+       "avg_glucose_level      0\n",
+       "bmi                  201\n",
+       "smoking_status         0\n",
+       "stroke                 0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the number of missing values in each column\n",
+    "df.isna().sum()"
+   ]
+  },
        "    <tr>\n",
        "      <th>5108</th>\n",
        "      <td>37544</td>\n",
