--- a/ML Assignment 2.ipynb
+++ b/ML Assignment 2.ipynb
@@ -406,54 +406,148 @@
     "df.isna().sum()"
    ]
   },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "68140b80",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>hypertension</th>\n",
+       "      <th>heart_disease</th>\n",
+       "      <th>ever_married</th>\n",
+       "      <th>work_type</th>\n",
+       "      <th>Residence_type</th>\n",
+       "      <th>avg_glucose_level</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>smoking_status</th>\n",
+       "      <th>stroke</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5108</th>\n",
-       "      <td>37544</td>\n",
+       "      <th>0</th>\n",
        "      <td>Male</td>\n",
-       "      <td>51.0</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>Urban</td>\n",
+       "      <td>228.69</td>\n",
+       "      <td>36.6</td>\n",
+       "      <td>formerly smoked</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>Rural</td>\n",
+       "      <td>105.92</td>\n",
+       "      <td>32.5</td>\n",
+       "      <td>never smoked</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>49.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Private</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>166.29</td>\n",
-       "      <td>25.6</td>\n",
-       "      <td>formerly smoked</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Urban</td>\n",
+       "      <td>171.23</td>\n",
+       "      <td>34.4</td>\n",
+       "      <td>smokes</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5109</th>\n",
-       "      <td>44679</td>\n",
+       "      <th>4</th>\n",
        "      <td>Female</td>\n",
-       "      <td>44.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Self-employed</td>\n",
+       "      <td>Rural</td>\n",
+       "      <td>174.12</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>never smoked</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>81.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>Govt_job</td>\n",
+       "      <td>Private</td>\n",
        "      <td>Urban</td>\n",
-       "      <td>85.28</td>\n",
-       "      <td>26.2</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>0</td>\n",
+       "      <td>186.21</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>formerly smoked</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         id  gender   age  hypertension  heart_disease ever_married  \\\n",
-       "5105  18234  Female  80.0             1              0          Yes   \n",
-       "5106  44873  Female  81.0             0              0          Yes   \n",
-       "5107  19723  Female  35.0             0              0          Yes   \n",
-       "5108  37544    Male  51.0             0              0          Yes   \n",
-       "5109  44679  Female  44.0             0              0          Yes   \n",
+       "   gender   age  hypertension  heart_disease ever_married      work_type  \\\n",
+       "0    Male  67.0             0              1          Yes        Private   \n",
+       "2    Male  80.0             0              1          Yes        Private   \n",
+       "3  Female  49.0             0              0          Yes        Private   \n",
+       "4  Female  79.0             1              0          Yes  Self-employed   \n",
+       "5    Male  81.0             0              0          Yes        Private   \n",
        "\n",
-       "          work_type Residence_type  avg_glucose_level   bmi   smoking_status  \\\n",
-       "5105        Private          Urban              83.75   NaN     never smoked   \n",
-       "5106  Self-employed          Urban             125.20  40.0     never smoked   \n",
-       "5107  Self-employed          Rural              82.99  30.6     never smoked   \n",
-       "5108        Private          Rural             166.29  25.6  formerly smoked   \n",
-       "5109       Govt_job          Urban              85.28  26.2          Unknown   \n",
+       "  Residence_type  avg_glucose_level   bmi   smoking_status  stroke  \n",
+       "0          Urban             228.69  36.6  formerly smoked       1  \n",
+       "2          Rural             105.92  32.5     never smoked       1  \n",
+       "3          Urban             171.23  34.4           smokes       1  \n",
+       "4          Rural             174.12  24.0     never smoked       1  \n",
+       "5          Urban             186.21  29.0  formerly smoked       1  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Drop datapoints with missing values in relevant columns\n",
+    "df.dropna(subset='bmi', inplace=True)\n",
+    "df.head()"
+   ]
+  },
        "\n",
        "      stroke  \n",
        "5105       0  \n",
