Analyse datatypes of columns

--- a/ML Assignment 2.ipynb
+++ b/ML Assignment 2.ipynb
@@ -548,13 +548,60 @@
     "df.head()"
    ]
   },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "83071bde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender                object\n",
+       "age                  float64\n",
+       "hypertension           int64\n",
+       "heart_disease          int64\n",
+       "ever_married          object\n",
+       "work_type             object\n",
+       "Residence_type        object\n",
+       "avg_glucose_level    float64\n",
+       "bmi                  float64\n",
+       "smoking_status        object\n",
+       "stroke                 int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get data types of columns\n",
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1dd20007",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace 'ever_married' and 'Residence_type' with binary values\n",
        "\n",
-       "      stroke  \n",
-       "5105       0  \n",
-       "5106       0  \n",
-       "5107       0  \n",
-       "5108       0  \n",
-       "5109       0  "
+    "replace_values = {\n",
+    "  'ever_married': {\n",
+    "    'No': 0,\n",
+    "    'Yes': 1\n",
+    "  },\n",
+    "  'Residence_type': {\n",
+    "    'Rural': 0,\n",
+    "    'Urban': 1 \n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "df.replace(replace_values, inplace=True)"
       ]
      },
      "execution_count": 4,
