Encode categorical values using label encoding

--- a/ML Assignment 2.ipynb
+++ b/ML Assignment 2.ipynb
@@ -604,14 +604,86 @@
     "df.replace(replace_values, inplace=True)"
       ]
      },
-     "execution_count": 4,
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "33237550",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gender</th>\n",
+       "      <th>smoking_status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   gender  smoking_status\n",
+       "0     1.0             1.0\n",
+       "2     1.0             2.0\n",
+       "3     0.0             3.0\n",
+       "4     0.0             2.0\n",
+       "5     1.0             1.0"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Read the last 5 lines\n",
-    "df.tail()"
+    "# Encode 'smoking_status' and 'gender' columns with numerical values using label encoding\n",
+    "ord_enc = preprocessing.OrdinalEncoder()\n",
+    "df[['gender', 'smoking_status']] = ord_enc.fit_transform(df[['gender', 'smoking_status']])\n",
+    "df[['gender', 'smoking_status']].head()"
    ]
   },
   {
