--- a/ML Assignment 2.ipynb
+++ b/ML Assignment 2.ipynb
@@ -688,24 +688,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "57f5da65",
+   "execution_count": 10,
+   "id": "9af747fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Keep backup of dataframe to maintain idempotency of the following cell\n",
+    "df_bak = df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1db72c80",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>work_type_Govt_job</th>\n",
+       "      <th>work_type_Never_worked</th>\n",
+       "      <th>work_type_Private</th>\n",
+       "      <th>work_type_Self-employed</th>\n",
+       "      <th>work_type_children</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>hypertension</th>\n",
+       "      <th>heart_disease</th>\n",
+       "      <th>ever_married</th>\n",
+       "      <th>Residence_type</th>\n",
+       "      <th>avg_glucose_level</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>smoking_status</th>\n",
+       "      <th>stroke</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>228.69</td>\n",
+       "      <td>36.6</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>105.92</td>\n",
+       "      <td>32.5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>171.23</td>\n",
+       "      <td>34.4</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>174.12</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>186.21</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(5110, 12)"
+       "   work_type_Govt_job  work_type_Never_worked  work_type_Private  \\\n",
+       "0                 0.0                     0.0                1.0   \n",
+       "1                 0.0                     0.0                1.0   \n",
+       "2                 0.0                     0.0                1.0   \n",
+       "3                 0.0                     0.0                0.0   \n",
+       "4                 0.0                     0.0                1.0   \n",
+       "\n",
+       "   work_type_Self-employed  work_type_children  gender   age  hypertension  \\\n",
+       "0                      0.0                 0.0     1.0  67.0           0.0   \n",
+       "1                      0.0                 0.0     1.0  80.0           0.0   \n",
+       "2                      0.0                 0.0     0.0  49.0           0.0   \n",
+       "3                      1.0                 0.0     0.0  79.0           1.0   \n",
+       "4                      0.0                 0.0     1.0  81.0           0.0   \n",
+       "\n",
+       "   heart_disease  ever_married  Residence_type  avg_glucose_level   bmi  \\\n",
+       "0            1.0           1.0             1.0             228.69  36.6   \n",
+       "1            1.0           1.0             0.0             105.92  32.5   \n",
+       "2            0.0           1.0             1.0             171.23  34.4   \n",
+       "3            0.0           1.0             0.0             174.12  24.0   \n",
+       "4            0.0           1.0             1.0             186.21  29.0   \n",
+       "\n",
+       "   smoking_status  stroke  \n",
+       "0             1.0     1.0  \n",
+       "1             2.0     1.0  \n",
+       "2             3.0     1.0  \n",
+       "3             2.0     1.0  \n",
+       "4             1.0     1.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Get the shape of the data set\n",
-    "df.shape"
+    "# Encode 'work_type' column with numerical values using one hot encoding\n",
+    "\n",
+    "transformer = make_column_transformer(\n",
+    "  (preprocessing.OneHotEncoder(), ['work_type']),\n",
+    "  remainder='passthrough',\n",
+    "  verbose_feature_names_out=False\n",
+    ")\n",
+    "\n",
+    "# Load backup dataframe to maintain idempotency\n",
+    "df = df_bak\n",
+    "\n",
+    "transformed = transformer.fit_transform(df)\n",
+    "df = pd.DataFrame(transformed, columns=transformer.get_feature_names_out())\n",
+    "df.head()"
    ]
   },
   {
