Analyse the dataset before training the model

--- a/ML Assignment 2.ipynb
+++ b/ML Assignment 2.ipynb
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "140050c9",
    "metadata": {},
    "outputs": [
@@ -915,94 +915,166 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
+       "      <th>work_type_Govt_job</th>\n",
+       "      <th>work_type_Never_worked</th>\n",
+       "      <th>work_type_Private</th>\n",
+       "      <th>work_type_Self-employed</th>\n",
+       "      <th>work_type_children</th>\n",
+       "      <th>gender</th>\n",
        "      <th>age</th>\n",
        "      <th>hypertension</th>\n",
        "      <th>heart_disease</th>\n",
+       "      <th>ever_married</th>\n",
+       "      <th>Residence_type</th>\n",
        "      <th>avg_glucose_level</th>\n",
        "      <th>bmi</th>\n",
+       "      <th>smoking_status</th>\n",
        "      <th>stroke</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>5110.000000</td>\n",
-       "      <td>5110.000000</td>\n",
-       "      <td>5110.000000</td>\n",
-       "      <td>5110.000000</td>\n",
-       "      <td>5110.000000</td>\n",
        "      <td>4909.000000</td>\n",
-       "      <td>5110.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
+       "      <td>4909.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>36517.829354</td>\n",
-       "      <td>43.226614</td>\n",
-       "      <td>0.097456</td>\n",
-       "      <td>0.054012</td>\n",
-       "      <td>106.147677</td>\n",
+       "      <td>0.128336</td>\n",
+       "      <td>0.004482</td>\n",
+       "      <td>0.572622</td>\n",
+       "      <td>0.157873</td>\n",
+       "      <td>0.136688</td>\n",
+       "      <td>0.410063</td>\n",
+       "      <td>42.865374</td>\n",
+       "      <td>0.091872</td>\n",
+       "      <td>0.049501</td>\n",
+       "      <td>0.652679</td>\n",
+       "      <td>0.507232</td>\n",
+       "      <td>105.305150</td>\n",
        "      <td>28.893237</td>\n",
-       "      <td>0.048728</td>\n",
+       "      <td>1.375433</td>\n",
+       "      <td>0.042575</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>21161.721625</td>\n",
-       "      <td>22.612647</td>\n",
-       "      <td>0.296607</td>\n",
-       "      <td>0.226063</td>\n",
-       "      <td>45.283560</td>\n",
+       "      <td>0.334497</td>\n",
+       "      <td>0.066801</td>\n",
+       "      <td>0.494748</td>\n",
+       "      <td>0.364659</td>\n",
+       "      <td>0.343552</td>\n",
+       "      <td>0.492309</td>\n",
+       "      <td>22.555115</td>\n",
+       "      <td>0.288875</td>\n",
+       "      <td>0.216934</td>\n",
+       "      <td>0.476167</td>\n",
+       "      <td>0.499999</td>\n",
+       "      <td>44.424341</td>\n",
        "      <td>7.854067</td>\n",
-       "      <td>0.215320</td>\n",
+       "      <td>1.067322</td>\n",
+       "      <td>0.201917</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>67.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.080000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>55.120000</td>\n",
        "      <td>10.300000</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>17741.250000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>25.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>77.245000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>77.070000</td>\n",
        "      <td>23.500000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>36932.000000</td>\n",
-       "      <td>45.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>91.885000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>44.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>91.680000</td>\n",
        "      <td>28.100000</td>\n",
+       "      <td>2.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>54682.000000</td>\n",
-       "      <td>61.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>114.090000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>113.570000</td>\n",
        "      <td>33.100000</td>\n",
+       "      <td>2.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>72940.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
        "      <td>82.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>271.740000</td>\n",
        "      <td>97.600000</td>\n",
+       "      <td>3.000000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1010,34 +1082,54 @@
        "</div>"
       ],
       "text/plain": [
-       "                 id          age  hypertension  heart_disease  \\\n",
-       "count   5110.000000  5110.000000   5110.000000    5110.000000   \n",
-       "mean   36517.829354    43.226614      0.097456       0.054012   \n",
-       "std    21161.721625    22.612647      0.296607       0.226063   \n",
-       "min       67.000000     0.080000      0.000000       0.000000   \n",
-       "25%    17741.250000    25.000000      0.000000       0.000000   \n",
-       "50%    36932.000000    45.000000      0.000000       0.000000   \n",
-       "75%    54682.000000    61.000000      0.000000       0.000000   \n",
-       "max    72940.000000    82.000000      1.000000       1.000000   \n",
+       "       work_type_Govt_job  work_type_Never_worked  work_type_Private  \\\n",
+       "count         4909.000000             4909.000000        4909.000000   \n",
+       "mean             0.128336                0.004482           0.572622   \n",
+       "std              0.334497                0.066801           0.494748   \n",
+       "min              0.000000                0.000000           0.000000   \n",
+       "25%              0.000000                0.000000           0.000000   \n",
+       "50%              0.000000                0.000000           1.000000   \n",
+       "75%              0.000000                0.000000           1.000000   \n",
+       "max              1.000000                1.000000           1.000000   \n",
        "\n",
-       "       avg_glucose_level          bmi       stroke  \n",
-       "count        5110.000000  4909.000000  5110.000000  \n",
-       "mean          106.147677    28.893237     0.048728  \n",
-       "std            45.283560     7.854067     0.215320  \n",
-       "min            55.120000    10.300000     0.000000  \n",
-       "25%            77.245000    23.500000     0.000000  \n",
-       "50%            91.885000    28.100000     0.000000  \n",
-       "75%           114.090000    33.100000     0.000000  \n",
-       "max           271.740000    97.600000     1.000000  "
+       "       work_type_Self-employed  work_type_children       gender          age  \\\n",
+       "count              4909.000000         4909.000000  4909.000000  4909.000000   \n",
+       "mean                  0.157873            0.136688     0.410063    42.865374   \n",
+       "std                   0.364659            0.343552     0.492309    22.555115   \n",
+       "min                   0.000000            0.000000     0.000000     0.080000   \n",
+       "25%                   0.000000            0.000000     0.000000    25.000000   \n",
+       "50%                   0.000000            0.000000     0.000000    44.000000   \n",
+       "75%                   0.000000            0.000000     1.000000    60.000000   \n",
+       "max                   1.000000            1.000000     2.000000    82.000000   \n",
+       "\n",
+       "       hypertension  heart_disease  ever_married  Residence_type  \\\n",
+       "count   4909.000000    4909.000000   4909.000000     4909.000000   \n",
+       "mean       0.091872       0.049501      0.652679        0.507232   \n",
+       "std        0.288875       0.216934      0.476167        0.499999   \n",
+       "min        0.000000       0.000000      0.000000        0.000000   \n",
+       "25%        0.000000       0.000000      0.000000        0.000000   \n",
+       "50%        0.000000       0.000000      1.000000        1.000000   \n",
+       "75%        0.000000       0.000000      1.000000        1.000000   \n",
+       "max        1.000000       1.000000      1.000000        1.000000   \n",
+       "\n",
+       "       avg_glucose_level          bmi  smoking_status       stroke  \n",
+       "count        4909.000000  4909.000000     4909.000000  4909.000000  \n",
+       "mean          105.305150    28.893237        1.375433     0.042575  \n",
+       "std            44.424341     7.854067        1.067322     0.201917  \n",
+       "min            55.120000    10.300000        0.000000     0.000000  \n",
+       "25%            77.070000    23.500000        0.000000     0.000000  \n",
+       "50%            91.680000    28.100000        2.000000     0.000000  \n",
+       "75%           113.570000    33.100000        2.000000     0.000000  \n",
+       "max           271.740000    97.600000        3.000000     1.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Analyze the dataset\n",
+    "# Analyze the dataset\n",
     "df.describe()"
    ]
   },
