Import required libraries for training model

--- a/ML Assignment 2.ipynb
+++ b/ML Assignment 2.ipynb
@@ -1134,12 +1134,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c846fa71",
+   "metadata": {},
+   "source": [
+    "## Training the Model: SVM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15fc239e",
+   "metadata": {},
+   "source": [
+    "### Import required libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e5675f58",
+   "execution_count": 13,
+   "id": "060a6c70",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.svm import SVC"
+   ]
+  },
   }
  ],
  "metadata": {
