Split dataset into training and testing sets

--- a/ML Assignment 2.ipynb
+++ b/ML Assignment 2.ipynb
@@ -1160,6 +1160,37 @@
     "from sklearn.svm import SVC"
    ]
   },
+  {
+   "cell_type": "markdown",
+   "id": "929943ee",
+   "metadata": {},
+   "source": [
+    "### Split dataset into training and testing sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b9fd39ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define X (features) and y (target)\n",
+    "X = df.drop(['heart_disease'], axis='columns')\n",
+    "y = df.heart_disease"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a25f72d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split dataset into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
+   ]
+  },
   }
  ],
  "metadata": {
