Test the model for accuracy

--- a/ML Assignment 2.ipynb
+++ b/ML Assignment 2.ipynb
@@ -1226,8 +1226,37 @@
     "model.fit(X_train, y_train)"
    ]
   },
+  {
+   "cell_type": "markdown",
+   "id": "5ab6f6ad",
+   "metadata": {},
+   "source": [
+    "### Test the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0c3d99cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model accuracy\t: 0.9521384928716904\n",
+      "Percentage\t: 95.2%\n"
+     ]
   }
  ],
+   "source": [
+    "# Test the model using the testing set\n",
+    "acc = model.score(X_test, y_test)\n",
+    "\n",
+    "print(f'Model accuracy\\t: {acc}')\n",
+    "print(f'Percentage\\t: {\"{:.1%}\".format(acc)}')"
+   ]
+  },
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
