--- a/ML Assignment 2.ipynb
+++ b/ML Assignment 2.ipynb
@@ -520,8 +520,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "id": "759f4b8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                     0\n",
+       "gender                 0\n",
+       "age                    0\n",
+       "hypertension           0\n",
+       "heart_disease          0\n",
+       "ever_married           0\n",
+       "work_type              0\n",
+       "Residence_type         0\n",
+       "avg_glucose_level      0\n",
+       "bmi                  201\n",
+       "smoking_status         0\n",
+       "stroke                 0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "ee6ca506",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dropna(inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "3124cfe7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                   0\n",
+       "gender               0\n",
+       "age                  0\n",
+       "hypertension         0\n",
+       "heart_disease        0\n",
+       "ever_married         0\n",
+       "work_type            0\n",
+       "Residence_type       0\n",
+       "avg_glucose_level    0\n",
+       "bmi                  0\n",
+       "smoking_status       0\n",
+       "stroke               0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "320b3b4d",
+   "id": "6257dcc0",
    "metadata": {},
    "outputs": [],
    "source": []
