Remove unnecessary columns

--- a/ML Assignment 2.ipynb
+++ b/ML Assignment 2.ipynb
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "759f4b8e",
+   "id": "2624f05d",
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "ee6ca506",
+   "id": "ce16a070",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,8 +564,10 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "3124cfe7",
-   "metadata": {},
+   "id": "35dcd7c0",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -596,8 +598,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "id": "d2b50787",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(['id'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6257dcc0",
+   "id": "691d1b3b",
    "metadata": {},
    "outputs": [],
    "source": []
