--- a/ML Assignment 2.ipynb
+++ b/ML Assignment 2.ipynb
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "2624f05d",
+   "id": "9d797337",
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "ce16a070",
+   "id": "bdfb8e71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "35dcd7c0",
+   "id": "6d71f23b",
    "metadata": {
     "scrolled": true
    },
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "d2b50787",
+   "id": "0f080ff1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,10 +609,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "691d1b3b",
+   "id": "74e46f36",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "le = LabelEncoder()\n",
+    "\n",
+    "for x in df.select_dtypes(include = 'object'):\n",
+    "    print(df[x].value_counts())\n",
+    "lable_data = df.loc[:,['gender','ever_married','work_type', 'Residence_type','smoking_status']]\n",
+    "\n",
+    "for x in lable_data.columns:\n",
+    "    lable_data[x] = le.fit_transform(lable_data[x])    \n",
+    "    \n",
+    "for x in lable_data.columns:\n",
+    "    df[x] = lable_data[x]  "
+   ]
   }
  ],
  "metadata": {
