Split dataset into x and y

--- a/ML Assignment 2.ipynb
+++ b/ML Assignment 2.ipynb
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "016602e5",
+   "id": "e68ce80c",
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "54fe8e71",
+   "id": "b598e836",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "c3fc46d7",
+   "id": "3070271f",
    "metadata": {
     "scrolled": true
    },
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "fd0e5937",
+   "id": "5fdc02ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "b061712d",
+   "id": "513140f0",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "fc8cfef5",
+   "id": "8ba70f91",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "45e03da4",
+   "id": "76e25465",
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "465122de",
+   "id": "a94ba4cc",
    "metadata": {},
    "outputs": [
     {
@@ -973,10 +973,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa2dbf32",
+   "id": "ac2c6921",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = df.drop(['stroke'], axis=1)\n",
+    "y = df['stroke']"
+   ]
   }
  ],
  "metadata": {
