--- a/ML Assignment 2.ipynb
+++ b/ML Assignment 2.ipynb
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "e68ce80c",
+   "id": "4b65844a",
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "b598e836",
+   "id": "174510cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "3070271f",
+   "id": "3892cfb2",
    "metadata": {
     "scrolled": true
    },
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "5fdc02ae",
+   "id": "7d00eb52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "513140f0",
+   "id": "edf06962",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "8ba70f91",
+   "id": "cd2d9574",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "76e25465",
+   "id": "dc8af433",
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "a94ba4cc",
+   "id": "460b38a2",
    "metadata": {},
    "outputs": [
     {
@@ -972,14 +972,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ac2c6921",
+   "execution_count": 63,
+   "id": "33ea433c",
    "metadata": {},
    "outputs": [],
    "source": [
     "x = df.drop(['stroke'], axis=1)\n",
     "y = df['stroke']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "08a325dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.5       , 0.81689453, 0.        , 1.        , 1.        ,\n",
+       "        0.5       , 1.        , 0.80126489, 0.30126002, 0.33333333],\n",
+       "       [0.5       , 0.97558594, 0.        , 1.        , 1.        ,\n",
+       "        0.5       , 0.        , 0.23451205, 0.25429553, 0.66666667],\n",
+       "       [0.        , 0.59716797, 0.        , 0.        , 1.        ,\n",
+       "        0.5       , 1.        , 0.53600776, 0.27605956, 1.        ],\n",
+       "       [0.        , 0.96337891, 1.        , 0.        , 1.        ,\n",
+       "        0.75      , 0.        , 0.54934909, 0.15693013, 0.66666667],\n",
+       "       [0.5       , 0.98779297, 0.        , 0.        , 1.        ,\n",
+       "        0.5       , 1.        , 0.60516111, 0.21420389, 0.33333333]])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Scaling x \n",
+    "scaler = MinMaxScaler()\n",
+    "x = scaler.fit_transform(x)\n",
+    "x[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22b23b1d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
