Split dataset into training and test set

--- a/ML Assignment 2.ipynb
+++ b/ML Assignment 2.ipynb
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "4b65844a",
+   "id": "f6a9ecec",
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "174510cc",
+   "id": "6aa93fad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "3892cfb2",
+   "id": "8433ff38",
    "metadata": {
     "scrolled": true
    },
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "7d00eb52",
+   "id": "5ef8a941",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "edf06962",
+   "id": "5d28f5cb",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "cd2d9574",
+   "id": "85cd376d",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "dc8af433",
+   "id": "b3a8340e",
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "460b38a2",
+   "id": "3f90b219",
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "33ea433c",
+   "id": "c54331d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "08a325dc",
+   "id": "0117578f",
    "metadata": {},
    "outputs": [
     {
@@ -1016,8 +1016,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 65,
+   "id": "e7d6cd30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Splitting data\n",
+    "x_train,x_test,y_train,y_test = train_test_split(x,y,test_size=0.25,random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "22b23b1d",
+   "id": "02a144b4",
    "metadata": {},
    "outputs": [],
    "source": []
