Implement decision tree

--- a/ML Assignment 2.ipynb
+++ b/ML Assignment 2.ipynb
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "f6a9ecec",
+   "id": "24a06b2a",
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "6aa93fad",
+   "id": "4a42bf5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "8433ff38",
+   "id": "0128c2bd",
    "metadata": {
     "scrolled": true
    },
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "5ef8a941",
+   "id": "9b766bef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "5d28f5cb",
+   "id": "8263c962",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "85cd376d",
+   "id": "359b3f27",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "b3a8340e",
+   "id": "2e0c24cd",
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "3f90b219",
+   "id": "037f0701",
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "c54331d4",
+   "id": "4ee126e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "0117578f",
+   "id": "42dae309",
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "e7d6cd30",
+   "id": "5713ec57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,8 +1027,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "id": "b1ce2386",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree Classifier\n",
+      "0.9039087947882736\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.95      0.95      0.95      1165\n",
+      "           1       0.12      0.14      0.13        63\n",
+      "\n",
+      "    accuracy                           0.90      1228\n",
+      "   macro avg       0.54      0.54      0.54      1228\n",
+      "weighted avg       0.91      0.90      0.91      1228\n",
+      "\n",
+      "Confusion Matrix - \n",
+      "[[1101   64]\n",
+      " [  54    9]]\n",
+      "*********************************************************************************************************\n"
+     ]
+    }
+   ],
+   "source": [
+    "#DecisionTreeClassifier() - Before oversampling\n",
+    "model = DecisionTreeClassifier()\n",
+    "model.fit(x_train, y_train)\n",
+    "y_pred = model.predict(x_test)\n",
+    "acc = accuracy_score(y_test,y_pred)\n",
+    "print('Decision Tree Classifier')\n",
+    "print(acc)\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "print('Confusion Matrix - ')\n",
+    "print(confusion_matrix(y_test, y_pred))\n",
+    "print('*' * 105)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "02a144b4",
+   "id": "301d086d",
    "metadata": {},
    "outputs": [],
    "source": []
