Inspect data imbalance

--- a/ML Assignment 2.ipynb
+++ b/ML Assignment 2.ipynb
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "24a06b2a",
+   "id": "e119d4a5",
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "4a42bf5d",
+   "id": "5801c3a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "0128c2bd",
+   "id": "4953d54d",
    "metadata": {
     "scrolled": true
    },
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "9b766bef",
+   "id": "848473a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "8263c962",
+   "id": "1e88d92e",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "359b3f27",
+   "id": "3465cf45",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "2e0c24cd",
+   "id": "242e41e0",
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "037f0701",
+   "id": "cffc7ede",
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "4ee126e2",
+   "id": "799d4f2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "42dae309",
+   "id": "b0678f13",
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "5713ec57",
+   "id": "781ea375",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1028,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "b1ce2386",
+   "id": "09307cb1",
    "metadata": {},
    "outputs": [
     {
@@ -1069,8 +1069,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "id": "beb6fde1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage of people who had a stroke = \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4.257486249745366"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Count number of people who has experienced a stroke or not\n",
+    "df['stroke'].value_counts()\n",
+    "\n",
+    "#Percentage of people who had a stroke\n",
+    "print(\"Percentage of people who had a stroke = \")\n",
+    "len(df[df['stroke'] == 1])/len(df)*100"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "301d086d",
+   "id": "90b272b0",
    "metadata": {},
    "outputs": [],
    "source": []
