--- a/ML Assignment 2.ipynb
+++ b/ML Assignment 2.ipynb
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "e119d4a5",
+   "id": "69ffbb67",
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "5801c3a5",
+   "id": "9a605652",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "4953d54d",
+   "id": "e603143d",
    "metadata": {
     "scrolled": true
    },
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "848473a5",
+   "id": "75d1392d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "1e88d92e",
+   "id": "0769f53a",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "3465cf45",
+   "id": "5d2d5548",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "242e41e0",
+   "id": "e95ba5fb",
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "cffc7ede",
+   "id": "f2c91c10",
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "799d4f2d",
+   "id": "b24fb854",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "b0678f13",
+   "id": "fe695176",
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "781ea375",
+   "id": "7eefbc56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1028,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "09307cb1",
+   "id": "cf33b1f5",
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "beb6fde1",
+   "id": "00f5b232",
    "metadata": {},
    "outputs": [
     {
@@ -1102,8 +1102,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "id": "86a27ae0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Data is imbalanced. As a result imbalanced data should be handled with sampling\n",
+    "sm = SMOTE()\n",
+    "x, y = sm.fit_resample(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "90b272b0",
+   "id": "302dece5",
    "metadata": {},
    "outputs": [],
    "source": []
